--- a/Project for App Domain/Web.config
+++ b/Project for App Domain/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SWE4713;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   <add name="SWE4713Entities" connectionString="metadata=res://*/Models.SWEModel.csdl|res://*/Models.SWEModel.ssdl|res://*/Models.SWEModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-GOQ5N2C\SQLEXPRESS;initial catalog=SWE4713;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
