--- a/Project for App Domain/Web.config
+++ b/Project for App Domain/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SWE4713;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-  <add name="SWE4713Entities" connectionString="metadata=res://*/Models.SWEModel.csdl|res://*/Models.SWEModel.ssdl|res://*/Models.SWEModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-GOQ5N2C\SQLEXPRESS;initial catalog=SWE4713;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="SWE4713Entities" connectionString="metadata=res://*/Models.SWEModel.csdl|res://*/Models.SWEModel.ssdl|res://*/Models.SWEModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALS-DELL-LAPTOP;initial catalog=SWE4713;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
